src/App.css
body {
  font-size: 20pt;
  background-image: linear-gradient(to right, #fe0000ea, #7e0701ea);
  color: white
}

@font-face {
  font-family: 'Trajan Pro Bold';
  src: local('Trajan Pro Bold'), url(./fonts/Trajan\ Pro\ Bold.ttf) format('truetype');
}

.flex-row {
  display: flex;
  flex-direction: row;
}

.flex-column {
  display: flex;
  flex-direction: column;
}

#list-and-profile {
  margin: 2.5%;
  justify-content: space-between;
}

#filter-options {
  justify-content: space-evenly;
  flex-wrap: wrap;
  min-height: 100px;
  margin: 1rem;
}

#attribute-section, #attack-type-section {
  width:40%;
}

#alphabet-filter {
  width: 95%;
  flex-wrap: nowrap;
}

button {
  margin: 2px;
  font-size: 20pt;
  border-radius: 10px;
  background-color:#7e0701ea;
  color: white;
  border: 2px solid white;
  padding: 1rem;
  margin: 0 1rem;
}

button:hover {
  font-weight: bold;
  border: 2px solid red;
}

header {
  display: flex;
  height: 300px;
  padding: 0 4rem;
}

#logo {
  max-width: auto;
  height: 300px;
  position: absolute;
}

h1 {
  font-family: 'Trajan Pro Bold';
  font-size: 70pt;
  letter-spacing: 1rem;
  position: absolute;
  left: 800px;
  top: 43px;
}

h1, h3 {
  text-align: center;
}

h2 {
  margin: 0;
  padding-top: 2rem;
  padding-left: 8rem;
}

h3 {
  margin:1rem;
}

#attribute-filter, #attack-type-filter {
  justify-content: space-evenly;
}

#first-inital-section {
  width:90%
}

#hero-list, #hero-profile-container {
  width: 45%;
}

#hero-list {
  display:flex;
  flex-wrap: wrap;
  align-items: flex-start;
  list-style: none;
  padding-left: 0;
  gap: 0.5rem 1rem;
  margin: 0;
}

#hero-profile-container {
  height: 300px;
  background-color: #7e0701ea;
  border-radius: 10px;
  padding: 1rem;
  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.527);
}

.hero-list-item {
  display: flex;
  width: 160px;
  height: 90px;
  background-color: #7e0701ea;
  color: white;
  cursor: pointer;
  border-radius: 10px;
  padding: 0.5rem;
  justify-content: center;
  align-items: center;
  text-align: center;
  box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5)
}

.hero-list-item:hover {
  cursor: pointer;
  background-color: rgba(0, 0, 0, 0.6);
  font-size: 22pt;
  font-weight: bold;
}

.profile-table-value {
  padding-left: 1rem
}

.profile-table-value {
  width: 70%;
}

header, footer {
  background-color: rgba(0, 0, 0, 0.74);
}

footer {
  height: 8rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.filter-options-button {
  padding: 2rem;
  font-weight: bold;
}

#filter-options-buttons {
  margin: 1rem 0;
}

#scroll-to-top {
  position: fixed;
  z-index: 100;
  background-color: rgba(0, 0, 0, 0.3);
  bottom: 10rem;
  right: 6rem;
  width: 7rem;
  border-radius: 30%;
  padding: 2rem;
}

